feat: add admin review management endpoints and UI for gym reviews